Redmine Issue 794 PURPOSE:As I was working on the data entry I noticed that the footer had white space below it.  Changed height from 14.5 to 13.5.  Not sure why it was like that.

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -226,7 +226,7 @@ body {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 14.5rem;
+	height: 13.5rem;
 	background-color: #f5f5f5;
 }
 .footer > .container {
